# ai10101ia

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  decision.yml  task.yml  (+1 more)
docs/: ACADEMIES.md  AUDIT_MODEL.md  AUDIT_READ_MODELS.md  CENTRAL_REGISTRY.md  CLI_USAGE.md  EVIDENCE_POLICY.md  GITHUB_RULESET_SETUP.md  GODS_TAXONOMY.md  GOVERNANCE.md  INDUSTRIALIZATION_ROADMAP.md  LINEAGES.md  MASTER_TODO.md  MULTI_INDEX.md  NEXT_PHASE_ARCHITECTURE.md  OPERATIONS.md  PILOT_DATASET.md  PILOT_FLOW.md  PROJECT_PHASES.md  RELEASE_GATES.md  REPOSITORY_STRUCTURE.md  RULE_ENGINE_CONTRACT.md  SLASH_BUS_CONTRACT.md  VALIDATION_POLICY.md  WORKFLOW_RULES.md
project/: academies_registry.yaml  bootstrap_entities.yaml  bootstrap_events.yaml  bootstrap_proofs.yaml  gods_registry.yaml  labels_reference.yaml  project_policy.yaml  robot_classes.yaml  todo_registry.yaml
scripts/: backup_local_state.py  build_audit_report.py  build_foundation_zip.py  check_dependencies.py  restore_local_state.py  run_pilot_flow.py  run_registry_cli.py  sync_checklist.py  validate_domain_assets.py  validate_pr_body.py  validate_todo_registry.py
src/: __init__.py
templates/: decision_record_template.md  evidence_record_template.md  task_record_template.md
tests/: test_backup_restore.py  test_check_dependencies.py  test_pilot_flow.py  test_sync_checklist.py  test_validate_todo_registry.py
(+20 files in other folders)
